--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/connectify-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Connectify</title>
+    <meta name="title" content="Connectify" />
+    <meta name="description" content="Where relationships thrive!" />
+
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/android-icon-512x512.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://connectify-xyz.vercel.app/" />
+    <meta property="og:title" content="Connectify" />
+    <meta property="og:description" content="Where relationships thrive!" />
+    <meta property="og:image" content="/connectify-favicon.png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="800" />
   </head>
   <body>
     <div id="root"></div>
